--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-native-headphone-detection",
   "version": "1.3.0",
   "description": "React Native headphone detection, both audio jack and bluetooth devices!",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "index.js",
   "scripts": {
     "build": "tsc"
   },
